[workspace]
members = [
	"day01/part1",
	"day01/part2",
	"day02/part1",
	"day02/part2",
	"day03",
	"day04/part1",
	"day04/part2",
	"day05/part1",
	"day05/part2",
	"day06/part1",
	"day06/part2",
	"day07/part1",
	"day07/part2",
	"day08/part1",
	"day08/part2",
	"day09/part1",
	"day09/part2",
	"day10/part1",
	"day10/part2",
]
